# fractal-lif-converters

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _typos.toml  mkdocs.yml  pyproject.toml  test_conversion.py  versions.json
.github/workflows/: build_and_test.yml  docs.yml
dev/: index.html
dev/changelog/: index.html
dev/condition_tables/: index.html
dev/converters/: index.html
dev/converters/lif_image/: index.html
dev/converters/lif_single/: index.html
dev/search/: search_index.json
docs/: condition_tables.md  how_to_run_the_converters.md  index.md
docs/converters/: index.md  lif_image.md  lif_plate.md  lif_single.md
src/fractal_lif_converters/: __FRACTAL_MANIFEST__.json  __init__.py  convert_lif_compute_task.py  convert_lif_plate_init_task.py  convert_lif_scene_init_task.py  convert_lif_single_acq_init_task.py  plate_parser.py  single_acq_parser.py  string_validation.py  tile_builders.py  wrappers.py
src/fractal_lif_converters/common/: __init__.py  _loaders.py  _string_validation.py  _tile_builders.py  _utils.py  image_in_plate_compute_task.py  loaders.py  options.py  single_image_compute_task.py  tile_builders.py
src/fractal_lif_converters/dev/: create_manifest.py  task_list.py
src/fractal_lif_converters/dev/docs_info/: lif_image_task.md  lif_plate_task.md
src/fractal_lif_converters/lif/: __init__.py  tile_builders.py
src/fractal_lif_converters/lif/plate/: __init__.py  convert_lif_plate_init_task.py  parser.py
src/fractal_lif_converters/lif/single/: __init__.py  convert_lif_single_acq_init_task.py  parser.py
src/fractal_lif_converters/lif_image/: __init__.py  _parser.py  api.py  convert_lif_image_init_task.py
src/fractal_lif_converters/lif_plate/: __init__.py  _parser.py  api.py  convert_lif_plate_init_task.py  parser.py
src/fractal_lif_converters/lif_single/: __init__.py  _setup.py  convert_lif_single_acq_init_task.py  parser.py
src/fractal_lif_converters/utils/: converter_utils.py
src/lif_converters/: __FRACTAL_MANIFEST__.json  __init__.py  bioio_image_utils.py  convert_lif_plate_init_task.py  convert_lif_scene_init_task.py  converter_utils.py  converter_wrapper.py  lif_converter_compute_task.py  lif_converter_task.py  lif_plate_converter_compute_task.py  lif_plate_converter_init_task.py  lif_scene_converter_compute_task.py  lif_scene_converter_init_task.py  lif_utils.py  ngff_image_meta_utils.py  ngff_plate_meta_utils.py  wrappers.py
src/lif_converters/dev/: create_manifest.py  task_list.py
src/lif_converters/utils/: __init__.py  converter_utils.py  lif_utils.py  ngff_image_meta_utils.py
tests/: cleanup_test_data.sh  conftest.py  test_lif_converter_task.py  test_lif_image_extended.py  test_lif_image_task.py  test_lif_plate_extended.py  test_lif_plate_task.py  test_lif_single_acq_extended.py  test_lif_single_acq_task.py  test_string_validation.py  test_thresholding_label_task.py  utils.py
tests/data/Leica-LIF/snapshots/: hcs_2w1p3c5z1t.json  hcs_2w1p3c5z1t.yaml  hcs_2w1p3c5z1t_plate.yaml  hcs_2w1p3c5z1t_single_acq.yaml  img_2w1p3c5z1t.json  img_2w1p3c5z1t.yaml
tests/data/snapshots/: lif_plate_default.yaml  lif_single_acq_default.yaml
v0.6.0/: 404.html
v0.6.0/changelog/: index.html
v0.6.0/converters/lif_plate/: index.html
v0.7.0/: 404.html  index.html
v0.7.0/changelog/: index.html
v0.7.0/condition_tables/: index.html
v0.7.0/converters/lif_plate/: index.html
v0.7.0/how_to_run_the_converters/: index.html
